2.3/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: praqma/network-multitool
        command: ["/bin/sh", "-c", "sleep infinity"]
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
